# AegisAI_Runtime

./: .gitignore  .mcp.json  AGENTS.md  Cargo.toml  README.md  SKILL.md  project.md  specification.md
.beads/: config.yaml  metadata.json
.codex/agents/: builder.toml  explorer.toml  pm.toml
.skill-staging/deliberate-response/: SKILL.md
agent/: README.md
agent/actuator/: Cargo.toml  README.md
agent/actuator/src/: actuator.rs  backend.rs  cgroup_isolation.rs  cpu_affinity.rs  cpuset_dry_run.rs  lib.rs  model.rs
agent/classifier/: Cargo.toml  README.md
agent/collector/: Cargo.toml  README.md
agent/ebpf_helper/: Cargo.toml  README.md
agent/explain_tune/: Cargo.toml  README.md
agent/explain_tune/src/: config.rs  engine.rs  lib.rs  model.rs
agent/git_control/: Cargo.toml  README.md
agent/metrics/: Cargo.toml  README.md
agent/policy_engine/: Cargo.toml  README.md
agent/policy_engine/src/: config.rs  engine.rs  lib.rs  model.rs  scenarios.rs
agent/runtime_contracts/: Cargo.toml  README.md
agent/runtime_daemon/: Cargo.toml  README.md
agent/runtime_daemon/src/: lib.rs  main.rs  metadata.rs  runtime_loop.rs  source.rs
agent/runtime_daemon/tests/: cli_help.rs
agent/runtime_orchestrator/: Cargo.toml  README.md
agent/runtime_orchestrator/src/: config.rs  lib.rs  model.rs  runtime_orchestrator.rs
bench/: README.md
bench/adaptive_policy_gate/: default_replay.json
bench/ai_workload_awareness/: README.md
bench/gpu_coordination_gate/: default_inventory.json
bench/inference_tail_guard/: README.md
bench/interference/: README.md
bench/observability_dashboard_gate/: default_artifacts.json
bench/scripts/: README.md  adaptive_policy_gate.py  gpu_coordination_gate.py  helper_portability_smoke.sh  inference_tail_guard_background_demotion_planner.py  inference_tail_guard_ollama_smoke.sh  inference_tail_guard_phase2r2_actuator_quality.sh  inference_tail_guard_phase4_report.sh  inference_tail_guard_preflight.sh  inference_tail_guard_tail_attribution.py  linux_source_ingestion_smoke.sh  (+13 more)
configs/: README.md
docs/: README.md  acceptance_ledger.md  adaptive_policy_gate.md  architecture.md  current_status.md  engineering_debt_boundaries.md  experiments.md  gpu_coordination_gate.md  handoff.md  host_strategy.md  latest_tasks.md  linux_validation.md  linux_vm_checklist.md  modular_execution_plan.md  mvp.md  mvp_benefit_report.md  next_stage.md  observability_dashboard_gate.md  packaging_contract.md  resume_pitch.md  roadmap.md  status.md  strategy.md  tail_guard_attribution_report.md  tail_guard_background_demotion_plan.md  task_list.md  verification_log.md
ebpf/: README.md
plugins/: README.md
scenarios/: README.md
(+52 files in other folders)
